<?xml version="1.0"?>
<package format="3">
  <name>multi_filter_pkg</name>
  <version>0.1.0</version>
  <description>Multi Filter TurtleBot3 Navigation with KF, EKF, PF and path saving</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build and run dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>nav2_map_server</depend>


  <!-- C++ and external libraries -->
  <build_depend>OpenCV</build_depend>
  <exec_depend>OpenCV</exec_depend>
  <build_depend>yaml-cpp</build_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


